--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.3
-beautifulsoup4==4.12.2
-selenium==4.11.2
-webdriver-manager==3.8.6
-requests==2.31.0
+Flask
+selenium
+requests
+beautifulsoup4
+webdriver-manager
